--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/parking_control
+spring.datasource.username=root
+spring.datasource.password=28112006
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
