Find by id implementado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/parking_control
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_parking_spot
+spring.datasource.username=postgres
 spring.datasource.password=28112006
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.format_sql=true
